update logs for insert/delete + log when print in scan and report + move LabelingScheme to server project

--- a/eclipse_ws/biobank.server/build.xml
+++ b/eclipse_ws/biobank.server/build.xml
@@ -45,6 +45,7 @@
 			</manifest>
 			<include name="**/applicationservice/*.*" />
 			<include name="**/query/*.*" />
+			<include name="**/util/*.*" />
 			<exclude name="**/*Impl.*" />
 		</jar>
 	</target>
