--- a/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/VarCharLengths.java.template
+++ b/eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/VarCharLengths.java.template
@@ -6,6 +6,10 @@ import java.util.Map;
 
 public class VarCharLengths {
     
+    // this map gives the maximum length for class attributes that are of
+    // type VARCHAR in the data model.
+    //
+    // if an attribute is not in the map then it does not have a maximum length
     private static Map<String, Integer> attrMaxLen;
     static {
        Map<String, Integer>  aMap = new HashMap<String, Integer>();
@@ -13,6 +17,7 @@ public class VarCharLengths {
        attrMaxLen = Collections.unmodifiableMap(aMap);
     };
 
+    // if an attribute is not in the map then it does not have a maximum length
     public static Integer getMaxSize(Class<?> klass, String attributeName) {
         return attrMaxLen.get(klass.getName() + "." + attributeName);
     }
