--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -97,7 +97,7 @@
       </perspective>
       <perspective
             class="edu.ualberta.med.biobank.rcp.LoggingPerspective"
-            icon="icons/reportsPerspective.png"
+            icon="icons/table_row_delete.png"
             id="edu.ualberta.med.biobank.perspective.logging"
             name="Logging View">
       </perspective>
@@ -995,10 +995,10 @@
                   style="push">
             </command>
             <command
-               commandId="edu.ualberta.med.biobank.commands.reports"
-               icon="icons/reportsPerspective.png"
-               label="Reports View"
-               style="push">
+                  commandId="edu.ualberta.med.biobank.commands.reports"
+                  icon="icons/reportsPerspective.png"
+                  label="Reports View"
+                  style="push">
             </command>
             <command
                commandId="edu.ualberta.med.biobank.commands.search"
@@ -1008,7 +1008,7 @@
             </command>
             <command
                   commandId="edu.ualberta.med.biobank.commands.logging"
-                  icon="icons/reportsPerspective.png"
+                  icon="icons/table_row_delete.png"
                   label="Logging View"
                   style="push">
             </command>
@@ -1137,6 +1137,13 @@
                   label="Search"
                   style="push"
                   tooltip="Search">
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.logging"
+                  icon="icons/table_row_delete.png"
+                  label="Logging"
+                  style="push"
+                  tooltip="Logging: search for specific information in stored logs">
             </command>
          </toolbar>
       </menuContribution>
@@ -1741,7 +1748,7 @@
       <editor
             class="edu.ualberta.med.biobank.forms.LoggingForm"
             default="false"
-            icon="icons/reportsPerspective.png"
+            icon="icons/table_row_delete.png"
             id="edu.ualberta.med.biobank.forms.LoggingForm"
             name="Logging Form">
       </editor>
@@ -1954,7 +1961,7 @@
       <view
             allowMultiple="false"
             class="edu.ualberta.med.biobank.views.LoggingView"
-            icon="icons/reportsPerspective.png"
+            icon="icons/table_row_delete.png"
             id="edu.ualberta.med.biobank.views.LoggingView"
             name="Logging"
             restorable="true">
