--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -118,6 +118,18 @@
             name="Quit">
       </command>
       <command
+            id="edu.ualberta.med.biobank.commands.reset"
+            name="Reset">
+      </command>
+      <command
+            id="edu.ualberta.med.biobank.commands.cancel"
+            name="Cancel">
+      </command>
+      <command
+            id="edu.ualberta.med.biobank.commands.confirm"
+            name="Confirm">
+      </command>
+      <command
             id="edu.ualberta.med.biobank.commands.siteAdd"
             name="Add Repository Site">
       </command>
@@ -272,6 +284,23 @@
             </reference>
          </activeWhen>
       </handler>
+		<handler
+            class="edu.ualberta.med.biobank.handlers.CancelHandler"
+            commandId="edu.ualberta.med.biobank.commands.cancel">
+      </handler>
+      <handler
+            class="edu.ualberta.med.biobank.handlers.ConfirmHandler"
+            commandId="edu.ualberta.med.biobank.commands.confirm">
+         <enabledWhen>
+            <reference
+                  definitionId="biobank2.confirmEnabled">
+            </reference>
+         </enabledWhen>
+      </handler>   
+      <handler
+            class="edu.ualberta.med.biobank.handlers.ResetHandler"
+            commandId="edu.ualberta.med.biobank.commands.reset">
+      </handler>         
       <handler
             class="edu.ualberta.med.biobank.handlers.PrintHandler"
             commandId="edu.ualberta.med.biobank.commands.print">
@@ -1869,6 +1898,18 @@
          </parameter>
       </key>
       <key
+      		commandId="edu.ualberta.med.biobank.commands.reset"
+      		schemeId="biobank2.scheme"
+      		sequence="M1+R"/>
+      <key
+      		commandId="edu.ualberta.med.biobank.commands.confirm"
+      		schemeId="biobank2.scheme"
+      		sequence="M1+S"/>
+      <key
+      		commandId="edu.ualberta.med.biobank.commands.cancel"
+      		schemeId="biobank2.scheme"
+      		sequence="M1+E"/>
+      <key
             commandId="org.eclipse.ui.file.close"
             sequence="M1+W"
             schemeId="biobank2.scheme" />
@@ -2129,6 +2170,28 @@
             <equals
                   value="edu.ualberta.med.biobank.perspective.logging">
             </equals>
+         </with>
+      </definition>
+      <definition
+            id="biobank2.editorDirty">
+         <with
+               variable="activeEditorId">
+            <test
+                  forcePluginActivation="true"
+                  property="dirty"
+                  value="true">
+            </test>
+         </with>
+      </definition>
+      <definition
+            id="biobank2.confirmEnabled">
+         <with
+               variable="activeEditorId">
+            <test
+                  forcePluginActivation="true"
+                  property="confirmEnabled"
+                  value="true">
+            </test>
          </with>
       </definition>
    </extension>
