--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -296,6 +296,7 @@
                   definitionId="biobank2.confirmEnabled">
             </reference>
          </activeWhen>
+         <enabledWhen></enabledWhen>
       </handler>   
       <handler
             class="edu.ualberta.med.biobank.handlers.ResetHandler"
